add flex to grid + height adjustment

--- a/src/components/homepage/section-three-product-show/styles.module.css
+++ b/src/components/homepage/section-three-product-show/styles.module.css
@@ -46,6 +46,8 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 4rem 2rem;
     place-items: center;
+    display: flex;
+    overflow: auto;
 }
 
 .productsGrid .productCardLink {
