--- a/src/components/homepage/section-three-product-show/styles.module.css
+++ b/src/components/homepage/section-three-product-show/styles.module.css
@@ -38,13 +38,6 @@
     line-height: 1.6;
     margin-bottom: 60px;
 }
-.barraLegal {
-    height: 30px;
-    width: 100%;
-    border-top: solid 4px #FABD05;
-    border-bottom: solid 4px #FABD05;
-    background-color: #CE102C;
-}
 
 /* GRID DE PRODUTOS */
 .productsGrid {
@@ -53,8 +46,7 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 4rem 2rem;
     place-items: center;
-    display: flex;
-    overflow: auto;
+    display: grid;
 }
 
 .productsGrid .productCardLink {
