--- a/src/components/homepage/section-dicas/styles.module.css
+++ b/src/components/homepage/section-dicas/styles.module.css
@@ -89,11 +89,13 @@
   }
   .dicasSection {
     padding-left: 0px;
+    height: 648px;
   }
 }
 
 @media (max-width: 890px) {
   .dicasSection {
     height: auto;
+    padding-bottom: 60px;
   }
 }
