--- a/src/components/homepage/section-dicas/styles.module.css
+++ b/src/components/homepage/section-dicas/styles.module.css
@@ -5,6 +5,8 @@
   overflow: hidden;
   background-color: #CE102C;
   padding-left: 63px;
+      background-image: url('/genericas/footer-bg-wave.png');
+    background-position: bottom;
 }
 .backgroundImage {
   width: 100%;
