--- a/src/components/homepage/section-dicas/styles.module.css
+++ b/src/components/homepage/section-dicas/styles.module.css
@@ -56,8 +56,10 @@
     text-align: center;
     width: 100%;
     max-width: 1200px;
-    margin: 12px auto 0;
-    padding-bottom: 20px;
+    margin: 0 auto ;
+    padding-bottom: 16px;
+    padding-left: 10px;
+    padding-right: 10px;
     font-size: 19px;
     font-weight: 100;
     line-height: 1.6;
@@ -86,8 +88,9 @@
     font-size: 32px;
   }
   .subtitle {
-    width: 70%;
+    width: 90%;
     font-size: 16px;
+    padding: 0;
   }
   .dicasSection {
     padding-left: 0px;
