--- a/src/components/homepage/section-form/styles.module.css
+++ b/src/components/homepage/section-form/styles.module.css
@@ -83,8 +83,8 @@
 }
 @media (max-width: 1024px) {
   .wrapper {
-    padding-left: 10;
-    padding-right: 10;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
