--- a/src/components/homepage/section-dicas/styles.module.css
+++ b/src/components/homepage/section-dicas/styles.module.css
@@ -129,7 +129,13 @@
   z-index: 10;
 }
 
-.dicasSwiper :global(.swiper-button-prev::after),
+.dicasSwiper :global(.swiper-button-prev::after) {
+  font-size: 16px;
+  opacity: 1 !important;
+  visibility: visible !important;
+  display: block !important;
+
+}
 .dicasSwiper :global(.swiper-button-next::after) {
   font-size: 16px;
   opacity: 1 !important;
@@ -147,7 +153,9 @@
     bottom: 24px;
   }
 
-  .dicasSwiper :global(.swiper-button-prev::after),
+  .dicasSwiper :global(.swiper-button-prev::after) {
+    font-size: 13px;
+  }
   .dicasSwiper :global(.swiper-button-next::after) {
     font-size: 13px;
   }
